--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <div class="container">
-
+      <span class="border"></span>
       <p style="color: white;">
          Puntuación: 
          <span id="score">1</span>
