--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       <p style="color: white;">
          Puntuación: 
          <span id="score">1</span>
+         <button id="btnPlay" style="display: block;">
+            Play
+         </button>
+         <button id="btnPause" style="display: block;">
+            Pause
+         </button>
       </p>
       <canvas id="canvas" width="320" height="500"></canvas>
    </div>
